--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,20 @@ authors = ["liyan"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-mysql = []
-redis = []
+feat-mysql = []
+feat-redis = []
 
 [dependencies]
-tokio = { version = "1.33.0", features = ["full"] }
-axum = "0.6.20"
-sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
-once_cell = "1.18.0"
-serde = { version = "1.0.190", features = ["derive"] }
-serde_json = "1.0.107"
-serde_yaml = "0.9.27"
+tokio = { version = "1.35.0", features = ["full"] }
+axum = "0.7.2"
+sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"] }
+once_cell = "1.19.0"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+serde_yaml = "0.9.29"
 tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }
 dotenv = "0.15.0"
 chrono = { version = "0.4.31", features = ["serde"] }
-time = { version = "0.3.30", features = ["macros"] }
-redis = { version = "0.23.3", features = ["tokio-comp"] }
+time = { version = "0.3.31", features = ["macros"] }
+redis = { version = "0.24.0", features = ["tokio-comp"] }
